Addressed review comment